hphp/test/zend/bad/ext/posix/tests/posix_getsid_error.php
<?php
var_dump( posix_getsid() );
var_dump( posix_getsid(array()) );
var_dump( posix_getsid(-1) );
?>
===DONE===